# vanguardbot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vanguardbot.sln  vanguardbot_win.sln
VanguardBotMac/: AppDelegate.h  AppDelegate.mm  Info.plist  main.m
VanguardBotMac/Base.lproj/: MainMenu.xib
common/: ini_file.cpp  ini_file.hpp  string_utils.cpp  string_utils.hpp  twitch.cpp  twitch.hpp  vanguardbot.cpp  vanguardbot.hpp
common/example_commands/commandtimer/: info.ini
common/example_commands/data/: quotes.txt
common/example_commands/fine/: info.ini
common/example_commands/howdead/: info.ini
common/example_commands/laugh/: info.ini
common/example_commands/messagetimer/: info.ini
common/example_commands/namepool/: info.ini
common/example_commands/quote/: info.ini
macos/: main.cpp  vanguardbot_base.cpp  vanguardbot_base.hpp  vanguardbot_base.mm
unix/: main.cpp  vanguardbot_base.cpp  vanguardbot_base.hpp
vanguardbot.xcodeproj/: project.pbxproj
vanguardbot.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
windows/: App.xaml  App.xaml.cpp  App.xaml.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  ini_file.cpp  main.cpp  pch.h  stdafx.cpp  vanguardbot.vcxproj  vanguardbot_TemporaryKey.pfx  vanguardbot_base.cpp  vanguardbot_base.hpp  vanguardbot_win.vcxproj  vanguardbot_win_TemporaryKey.pfx  vanguardstringutils.cpp  vanguardstringutils.hpp
